--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-  <meta charset="utf-8">
-  <title>Senaliza</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Senaliza</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles.css') }}"
+    />
+  </head>
 
-<body>
-  <div class="blue-section">
-    <div class="container-fluid ms-4 mt-1">
-      <!-- Contenido de la sección -->
-      <h1 class="logo-text">
-        SeñaLiza
-      </h1>
-      <div class="circular-image-container">
-        <img src="{{ url_for('static', filename='lengua.png') }}" alt="Logo">
+  <body>
+    <div class="blue-section">
+      <div class="container-fluid ms-4 mt-1">
+        <!-- Contenido de la sección -->
+        <h1 class="logo-text">SeñaLiza</h1>
+        <div class="circular-image-container">
+          <img
+            src="{{ url_for('static', filename='lengua.png') }}"
+            alt="Logo"
+          />
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="container-camera">
-    <img src="{{ url_for('video_feed') }}" width="640" height="480">
+    <div class="container-camera">
+      <img src="{{ url_for('video_feed') }}" width="640" height="480" />
+    </div>
+  </body>
+t="480">
   </div>
 </body>
 </html>
