--- a/templates/index.html
+++ b/templates/index.html
@@ -38,13 +38,28 @@
           />
         </div>
       </div>
+    </div>    
+    
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col">
+          <h2>¡Bienvenido a SeñaLiza!</h2>
+        </div>
+      </div>
     </div>
 
-    <div class="container-camera">
-      <img src="{{ url_for('video_feed') }}" width="640" height="480" />
+    <div class="container justify-content-center"></div>
+      <div class="row">
+        <div class="col">
+          <p>SeñaLiza es una aplicación que te permite traducir lengua de señas a letras o palabras.
+
+            Para comenzar, presiona el botón de abajo. Luego, enfoca la cámara a la letra que deseas traducir.</p>
+        </div>
+      </div>
     </div>
-  </body>
-t="480">
-  </div>
+
+    <div>
+      <div class="d-flex justify-content-center"><a href="{{ url_for('start_translate') }}" class="btn btn-primary">Comenzar</a></div>
+    </div>
 </body>
 </html>
