--- a/static/styles.css
+++ b/static/styles.css
@@ -48,3 +48,14 @@
   color: black;
   text-align: center;
 }
+
+.tarjeta {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 20px;
+  display: inline-block;
+  width: 300px;
+
+}
