fix bug camara & update html

--- a/templates/alphabet.html
+++ b/templates/alphabet.html
@@ -43,12 +43,12 @@
     </div>
     <div class="container-camera">
       <img src="{{ url_for('video_feed') }}" width="640" height="480" />
-    </div>
 
-    <div class="container-fluid">
-      <div class="d-flex justify-content-center">
-        <a href="{{ url_for('finish_translate') }}" class="btn btn-primary">Finalizar</a>
-      </div>
+      <div class="container-fluid">
+        <div class="d-flex justify-content-center mt-5">
+          <a href="{{ url_for('finish_translate') }}" class="btn btn-primary">Finalizar</a>
+        </div>
+    </div>
     </div>
   </body>
   </div>
