--- a/static/styles.css
+++ b/static/styles.css
@@ -44,7 +44,7 @@
   padding: 40px;
   width: 100%;
   height: 100vh;
-  background-color: #e2d8f8;
+  background-color: #ffffff;
   color: black;
   text-align: center;
 }
