--- a/templates/index.html
+++ b/templates/index.html
@@ -50,18 +50,21 @@
       </div>
     </div>
 
-    <div class="container justify-content-center"></div>
+    <div class="container justify-content-center">
       <div class="row">
         <div class="d-flex justify-content-center">
           <div class="tarjeta">
             <p>SeñaLiza es una aplicación que te permite traducir lengua de señas a letras o palabras.</p>
-             <p>Para comenzar, presiona el botón de abajo. Luego, enfoca la cámara a la letra que deseas traducir.</p> 
+            <p>Para comenzar, presiona el botón de abajo. Luego, enfoca la cámara a la letra que deseas traducir.</p> 
           </div>
         </div>
       </div>
     </div>
+
     <div>
-      <div class="d-flex justify-content-center"><a href="{{ url_for('start_translate') }}" class="btn btn-primary">Comenzar</a></div>
+      <div class="d-flex justify-content-center">
+        <a href="{{ url_for('start_translate') }}" class="btn btn-primary">Comenzar</a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
