fix ruta del modelo, add gif

--- a/templates/alphabet.html
+++ b/templates/alphabet.html
@@ -48,6 +48,9 @@
         <div class="d-flex justify-content-center mt-5">
           <a href="{{ url_for('finish_translate') }}" class="btn btn-primary">Finalizar</a>
         </div>
+        <div class="d-flex justify-content-center mt-4">
+          <img src="{{ url_for('static', filename='Terminar.gif') }}" alt="TerminarSigno" width="175" height="105">
+        </div>
     </div>
     </div>
   </body>
