--- a/templates/index.html
+++ b/templates/index.html
@@ -61,9 +61,13 @@
       </div>
     </div>
 
-    <div>
+    <div class="container-fluid">
       <div class="d-flex justify-content-center">
         <a href="{{ url_for('start_translate') }}" class="btn btn-primary">Comenzar</a>
+      </div>
+      <div class="d-flex justify-content-center mt-4">
+        <img src="{{ url_for('static', filename='Empezar.gif') }}" alt="EmpezarSigno" width="175" height="105">
+      </div>
       </div>
     </div>
   </body>
