features: modelo para palabras, historial
deleted models

--- a/templates/alphabet.html
+++ b/templates/alphabet.html
@@ -9,7 +9,7 @@
     Apunta la cámara hacia una letra en lenguaje de señas para comenzar la traducción.
   </p>
   <div class="d-flex justify-content-center">
-    <img src="{{ url_for('video_feed') }}" class="video-box" />
+    <img src="{{ url_for('video_feed_alphabet') }}" class="video-box" />
   </div>
   <div class="mt-4">
     <a href="{{ url_for('finish_translate') }}" class="btn btn-danger btn-lg px-5 rounded-pill">Finalizar</a>
