--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <h2 class="mb-4 fw-bold">¡Bienvenido a SeñaLiza!</h2>
   <p class="mb-4 text-muted">
     SeñaLiza es una aplicación que te permite traducir lengua de señas a letras o palabras.
-    Para comenzar, presiona el botón de abajo. Luego, enfoca la cámara a la letra que deseas traducir.
+    Para comenzar, presiona el botón de abajo.
   </p>
   <a href="{{ url_for('start_translate') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Comenzar</a>
   <div class="mt-4">
