--- a/templates/biblioteca.html
+++ b/templates/biblioteca.html
@@ -5,6 +5,7 @@
 {% block content %}
 <div class="container mt-5">
   <h2 class="mb-4 fw-bold text-center">Biblioteca de Señas</h2>
+  <p class="text-center">Recursos sobre la comunidad sorda</p>
 
   <h3 class="fw-bold mt-5">Alfabeto</h3>
   <div class="row row-cols-1 row-cols-md-4 g-4">
