--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
             <a class="nav-link text-dark fw-medium" href="{{ url_for('biblioteca') }}">Biblioteca</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark fw-medium" href="{{ url_for('translation_history') }}">Historial</a>
+              </li>
           </ul>
         </div>
       </div>
