--- a/templates/words.html
+++ b/templates/words.html
@@ -12,6 +12,9 @@
     <img src="{{ url_for('video_feed_words') }}" class="video-box" />
   </div>
   <h4 class="mt-3" id="dynamic-string">Traducción</h4>
+  <div class="mt-4">
+    <button onclick="leerTexto(document.getElementById('dynamic-string').innerText)" class="btn btn-success btn-lg px-5 rounded-pill">Leer Traducción</button>
+  </div>
   <div class="row">
     <div class="col">  
       <div class="container mt-4">
@@ -59,15 +62,24 @@
   });
 </script>
 
+
 <script type="text/javascript" charset="utf-8">
   document.addEventListener('DOMContentLoaded', function () {
       var socket = io.connect('http://' + document.domain + ':' + location.port);
 
       socket.on('update_string', function(data) {
-          document.getElementById('dynamic-string').innerText = data.text;
+          // Actualiza el texto dinámico en la página
+          var dynamicString = document.getElementById('dynamic-string');
+          dynamicString.innerText = data.text;
       });
   });
+
+  // Función para leer el texto en voz alta con ResponsiveVoice
+  function leerTexto(texto) {
+      responsiveVoice.speak(texto, "Spanish Latin American Female");
+  }
 </script>
+
 {% endblock %}
 
 
