--- a/templates/words.html
+++ b/templates/words.html
@@ -1,86 +1,98 @@
-{% extends 'base.html' %}
-
-{% block title %}Palabras - SeñaLiza{% endblock %}
-
-{% block content %}
+{% extends 'base.html' %} {% block title %}Palabras - SeñaLiza{% endblock %} {%
+block content %}
 <div class="video-frame p-5 shadow-lg rounded-4 bg-white">
   <h2 class="mb-4 fw-bold">Palabras en Lengua de Señas</h2>
   <p class="mb-4 text-muted">
-    Comienza la grabacion de una palabra en lengua de señas, cuando termines de grabar la palabra, presiona el boton de finalizar.
+    Comienza la grabacion de una palabra en lengua de señas, cuando termines de
+    grabar la palabra, presiona el boton de finalizar.
   </p>
   <div class="d-flex justify-content-center">
     <img src="{{ url_for('video_feed_words') }}" class="video-box" />
   </div>
-  <h4 class="mt-3" id="dynamic-string">Traducción</h4>
-  <div class="mt-4">
-    <button onclick="leerTexto(document.getElementById('dynamic-string').innerText)" class="btn btn-success btn-lg px-5 rounded-pill">Leer Traducción</button>
+  <div class="d-flex justify-content-center mt-4">
+      <h4 class="mb-0" id="dynamic-string">Traducción</h4>
+      <button
+        onclick="leerTexto(document.getElementById('dynamic-string').innerText)"
+        class="btn btn-link ms-2"
+      >
+        <i class="fas fa-volume-up fa-lg"></i>
+      </button>
   </div>
   <div class="row">
-    <div class="col">  
+    <div class="col">
       <div class="container mt-4">
-      <button id="start-btn" class="btn btn-primary btn-lg px-5 rounded-pill">Grabar</button>
+        <button id="start-btn" class="btn btn-primary btn-lg px-5 rounded-pill">
+          Grabar
+        </button>
       </div>
     </div>
     <div class="col">
       <div class="container mt-4">
-        <button id="stop-btn" class="btn btn-secondary btn-lg px-5 rounded-pill">Detener</button>
+        <button
+          id="stop-btn"
+          class="btn btn-secondary btn-lg px-5 rounded-pill"
+        >
+          Detener
+        </button>
       </div>
     </div>
   </div>
   <div class="mt-4">
-    <a href="{{ url_for('finish_translate') }}" class="btn btn-danger btn-lg px-5 rounded-pill">Finalizar</a>
+    <a
+      href="{{ url_for('finish_translate') }}"
+      class="btn btn-danger btn-lg px-5 rounded-pill"
+      >Finalizar</a
+    >
   </div>
   <div class="mt-4">
-    <img src="{{ url_for('static', filename='Terminar.gif') }}" alt="Terminar Traducción" width="175" height="105" />
+    <img
+      src="{{ url_for('static', filename='Terminar.gif') }}"
+      alt="Terminar Traducción"
+      width="175"
+      height="105"
+    />
   </div>
 </div>
 
-
-
-
 <script>
-  $("#start-btn").click(function() {
-      $.ajax({
-          url: "/start_recording",
-          type: "POST",
-          success: function(response) {
-              alert(response.message);
-          }
-      });
+  $("#start-btn").click(function () {
+    $.ajax({
+      url: "/start_recording",
+      type: "POST",
+      success: function (response) {
+        alert(response.message);
+      },
+    });
   });
 </script>
 
 <script>
-  $("#stop-btn").click(function() {
-      $.ajax({
-          url: "/stop_recording",
-          type: "POST",
-          success: function(response) {
-              alert(response.message);
-          }
-      });
+  $("#stop-btn").click(function () {
+    $.ajax({
+      url: "/stop_recording",
+      type: "POST",
+      success: function (response) {
+        alert(response.message);
+      },
+    });
   });
 </script>
-
 
 <script type="text/javascript" charset="utf-8">
-  document.addEventListener('DOMContentLoaded', function () {
-      var socket = io.connect('http://' + document.domain + ':' + location.port);
+  document.addEventListener("DOMContentLoaded", function () {
+    var socket = io.connect("http://" + document.domain + ":" + location.port);
 
-      socket.on('update_string', function(data) {
-          // Actualiza el texto dinámico en la página
-          var dynamicString = document.getElementById('dynamic-string');
-          dynamicString.innerText = data.text;
-      });
+    socket.on("update_string", function (data) {
+      // Actualiza el texto dinámico en la página
+      var dynamicString = document.getElementById("dynamic-string");
+      dynamicString.innerText = data.text;
+    });
   });
 
   // Función para leer el texto en voz alta con ResponsiveVoice
   function leerTexto(texto) {
-      responsiveVoice.speak(texto, "Spanish Latin American Female");
+    responsiveVoice.speak(texto, "Spanish Latin American Female");
   }
 </script>
 
 {% endblock %}
-
-
-
