--- a/templates/phrases.html
+++ b/templates/phrases.html
@@ -1,18 +1,18 @@
-{% extends 'base.html' %} {% block title %}Palabras - SeñaLiza{% endblock %} {%
+{% extends 'base.html' %} {% block title %}Frases - SeñaLiza{% endblock %} {%
 block content %}
 <div class="video-frame p-5 shadow-lg rounded-4 bg-white">
-  <h2 class="mb-4 fw-bold">Palabras en Lengua de Señas</h2>
+  <h2 class="mb-4 fw-bold">Frases en Lengua de Señas</h2>
   <p class="mb-4 text-muted">
-    Comienza la grabacion de una palabra en lengua de señas, cuando termines de
-    grabar la palabra, presiona el boton de detener.
+    Comienza la grabacion de una Frase en lengua de señas, cuando termines de
+    grabar la Frase, presiona el boton de detener.
   </p>
   <div class="d-flex justify-content-center">
-    <img src="{{ url_for('video_feed_words') }}" class="video-box" />
+    <img src="{{ url_for('video_feed_phrases') }}" class="video-box" />
   </div>
   <div class="d-flex justify-content-center mt-4">
-      <h4 class="mb-0" id="dynamic-string-word">Traducción</h4>
+      <h4 class="mb-0" id="dynamic-string-phrase">Traducción</h4>
       <button
-        onclick="leerTexto(document.getElementById('dynamic-string-word').innerText)"
+        onclick="leerTexto(document.getElementById('dynamic-string-phrase').innerText)"
         class="btn btn-link ms-2"
       >
         <i class="fas fa-volume-up fa-lg"></i>
@@ -37,12 +37,12 @@ block content %}
       </div>
     </div>
   </div>
-<div class="container mt-4">
-  <form id="upload-video-form" enctype="multipart/form-data">
-    <input type="file" id="video-file" name="video" accept="video/*">
-    <button type="button" onclick="uploadVideo()">Subir Video</button>
-  </form>
-</div>
+  <div class="container mt-4">
+    <form id="upload-video-form" enctype="multipart/form-data">
+      <input type="file" id="video-file" name="video" accept="video/*">
+      <button  type="button" onclick="uploadVideo()">Subir Video</button>
+    </form>
+  </div>
   <div class="mt-4">
     <a
       href="{{ url_for('finish_translate') }}"
@@ -75,7 +75,7 @@ block content %}
 <script>
   $("#stop-btn").click(function () {
     $.ajax({
-      url: "/stop_recording/words",
+      url: "/stop_recording/phrases",
       type: "POST",
       success: function (response) {
         alert(response.message);
@@ -88,17 +88,17 @@ block content %}
   document.addEventListener("DOMContentLoaded", function () {
     var socket = io.connect("http://" + document.domain + ":" + location.port);
 
-    // Listener para actualizaciones de palabras
-    socket.on("update_string_word", function (data) {
-      var dynamicStringWord = document.getElementById("dynamic-string-word");
-      dynamicStringWord.innerText = data.text;
+    // Listener para actualizaciones de frases
+    socket.on("update_string_phrase", function (data) {
+      var dynamicStringPhrase = document.getElementById("dynamic-string-phrase");
+      dynamicStringPhrase.innerText = data.text;
     });
   });
 
   // Función para leer el texto en voz alta con ResponsiveVoice
-  function leerTexto(texto) {
-    responsiveVoice.speak(texto, "Spanish Latin American Female");
-  }
+function leerTexto(texto) {
+  responsiveVoice.speak(texto, "Spanish Latin American Female");
+}
 </script>
 
 <script>
@@ -107,18 +107,11 @@ block content %}
     var videoFile = document.getElementById("video-file").files[0];
     formData.append("video", videoFile);
 
-    fetch("/upload_video/words", {
+    fetch("/upload_video/phrases", {
       method: "POST",
       body: formData
     })
     .then(response => response.json())
-    .then(data => {
-      if (data.status === "success") {
-        document.getElementById("predictions-output").innerText = "Predicción: " + data.prediction;
-      } else {
-        alert(data.message);
-      }
-    })
     .catch(error => {
       console.error("Error al cargar el video:", error);
     });
