--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=tdR7AcqB"></script> -->
   </head>
 
   <body class="d-flex flex-column min-vh-100">
@@ -39,15 +38,18 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item d-flex align-items-center">
+              <img src="{{ url_for('static', filename='Inicio.gif') }}" alt="Inicio" width="50" class="me-2" />
               <a class="nav-link text-dark fw-medium" href="{{ url_for('index') }}">Inicio</a>
             </li>
-            <li class="nav-item">
-            <a class="nav-link text-dark fw-medium" href="{{ url_for('biblioteca') }}">Biblioteca</a>
+            <li class="nav-item d-flex align-items-center">
+              <img src="{{ url_for('static', filename='Biblioteca.gif') }}" alt="Biblioteca" width="50" class="me-2" />
+              <a class="nav-link text-dark fw-medium" href="{{ url_for('biblioteca') }}">Biblioteca</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex align-items-center">
+              <img src="{{ url_for('static', filename='Historial.gif') }}" alt="Historial" width="50"  class="me-2" />
               <a class="nav-link text-dark fw-medium" href="{{ url_for('translation_history') }}">Historial</a>
-              </li>
+            </li>
           </ul>
         </div>
       </div>
@@ -72,5 +74,3 @@
     ></script>
   </body>
 </html>
-
-
