--- a/templates/choice.html
+++ b/templates/choice.html
@@ -3,14 +3,29 @@
 {% block title %}Inicio - SeñaLiza{% endblock %}
 
 {% block content %}
-<div class="video-frame p-5 shadow-lg rounded-4 bg-white">
+<div class="video-frame p-5 shadow-lg rounded-4 bg-white text-center">
     <p class="mb-4 text-muted">
-    A continuacion selecciona una de las siguientes opciones para empezar a traducir lengua de señas colombiana.
+        A continuación selecciona una de las siguientes opciones para empezar a traducir lengua de señas colombiana.
     </p>
-    <div class="row">
-        <div class="col-3 me-3"><a href="{{ url_for('alphabet') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Alfabeto</a></div>
-        <div class="col-3 ms-5 me-5"><a href="{{ url_for('words') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Palabras</a></div>
-        <div class="col-3 ms-3"><a href="{{ url_for('phrases') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Frases</a></div>
+    <div class="d-flex justify-content-center gap-4">
+        <div class="text-center">
+            <a href="{{ url_for('alphabet') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Alfabeto</a>
+            <div class="mt-2">
+                <img src="{{ url_for('static', filename='Alfabeto.gif') }}" alt="Gif Alfabeto" width="100" height="80">
+            </div>
+        </div>
+        <div class="text-center">
+            <a href="{{ url_for('words') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Palabras</a>
+            <div class="mt-2">
+                <img src="{{ url_for('static', filename='Palabra.gif') }}" alt="Gif Palabra" width="100" height="80">
+            </div>
+        </div>
+        <div class="text-center">
+            <a href="{{ url_for('phrases') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Frases</a>
+            <div class="mt-2">
+                <img src="{{ url_for('static', filename='Frase.gif') }}" alt="Gif Frase" width="100" height="80">
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
