--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=tdR7AcqB"></script> -->
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=tdR7AcqB"></script>
   </head>
 
   <body class="d-flex flex-column min-vh-100">
