--- a/templates/words.html
+++ b/templates/words.html
@@ -13,8 +13,7 @@ block content %}
       <h4 class="mb-0" id="dynamic-string-word">Traducción</h4>
       <button
         onclick="leerTexto(document.getElementById('dynamic-string-word').innerText)"
-        class="btn btn-link ms-2"
-      >
+        class="btn btn-link ms-2">
         <i class="fas fa-volume-up fa-lg"></i>
       </button>
   </div>
@@ -88,14 +87,12 @@ block content %}
   document.addEventListener("DOMContentLoaded", function () {
     var socket = io.connect("http://" + document.domain + ":" + location.port);
 
-    // Listener para actualizaciones de palabras
     socket.on("update_string_word", function (data) {
       var dynamicStringWord = document.getElementById("dynamic-string-word");
       dynamicStringWord.innerText = data.text;
     });
   });
 
-  // Función para leer el texto en voz alta con ResponsiveVoice
   function leerTexto(texto) {
     responsiveVoice.speak(texto, "Spanish Latin American Female");
   }
@@ -105,6 +102,13 @@ block content %}
   function uploadVideo() {
     var formData = new FormData();
     var videoFile = document.getElementById("video-file").files[0];
+
+    // Verificación si hay archivo seleccionado
+    if (!videoFile) {
+      alert("Por favor selecciona un archivo de video.");
+      return;
+    }
+
     formData.append("video", videoFile);
 
     fetch("/upload_video/words", {
@@ -114,9 +118,10 @@ block content %}
     .then(response => response.json())
     .then(data => {
       if (data.status === "success") {
-        document.getElementById("predictions-output").innerText = "Predicción: " + data.prediction;
+        console.log("Mensaje del servidor:", data.message);
+        alert(data.message); // Mostrar el mensaje en una alerta o en la interfaz
       } else {
-        alert(data.message);
+        console.error("Error en el servidor:", data.message);
       }
     })
     .catch(error => {
