--- a/templates/choice.html
+++ b/templates/choice.html
@@ -11,19 +11,19 @@
         <div class="text-center">
             <a href="{{ url_for('alphabet') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Alfabeto</a>
             <div class="mt-2">
-                <img src="{{ url_for('static', filename='Alfabeto.gif') }}" alt="Gif Alfabeto" width="100" height="80">
+                <!--<img src="{{ url_for('static', filename='Alfabeto.gif') }}" alt="Gif Alfabeto" width="100" height="80">-->
             </div>
         </div>
         <div class="text-center">
             <a href="{{ url_for('words') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Palabras</a>
             <div class="mt-2">
-                <img src="{{ url_for('static', filename='Palabra.gif') }}" alt="Gif Palabra" width="100" height="80">
+                <!--<img src="{{ url_for('static', filename='Palabra.gif') }}" alt="Gif Palabra" width="100" height="80">-->
             </div>
         </div>
         <div class="text-center">
             <a href="{{ url_for('phrases') }}" class="btn btn-primary btn-lg px-5 rounded-pill">Frases</a>
             <div class="mt-2">
-                <img src="{{ url_for('static', filename='Frase.gif') }}" alt="Gif Frase" width="100" height="80">
+                <!--<img src="{{ url_for('static', filename='Frase.gif') }}" alt="Gif Frase" width="100" height="80">-->
             </div>
         </div>
     </div>
