--- a/templates/phrases.html
+++ b/templates/phrases.html
@@ -33,13 +33,12 @@
       </button>
     </div>
   </div>
-  <div class="d-flex flex-column align-items-center mt-4">
-    <form id="upload-video-form" enctype="multipart/form-data" class="d-flex gap-3">
-      <label for="video-file" class="custom-file-upload btn btn-secondary btn-sm px-3 rounded-pill">Seleccionar</label>
-      <input type="file" id="video-file" name="video" accept="video/*" style="display: none;">
-      <button type="button" onclick="uploadVideo()" class="btn btn-secondary btn-sm px-3 rounded-pill">Subir Video</button>
+  <div class="container mt-4">
+    <form id="upload-video-form" enctype="multipart/form-data">
+      <input type="file" id="video-file" name="video" accept="video/*">
+      <button type="button" onclick="uploadVideo()">Subir Video</button>
     </form>
-  </div>
+  </div>  
   <div class="d-flex justify-content-center mt-4">
     <a href="{{ url_for('finish_translate') }}" class="btn btn-danger btn-lg px-5 rounded-pill">Finalizar</a>
   </div>
