--- a/templates/base.html
+++ b/templates/base.html
@@ -40,15 +40,15 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item d-flex align-items-center">
-              <!-- <img src="{{ url_for('static', filename='Inicio.gif') }}" alt="Inicio" width="50" class="me-2" />-->
+              <img src="{{ url_for('static', filename='Inicio.gif') }}" alt="Inicio" width="50" class="me-2" />
               <a class="nav-link text-dark fw-medium" href="{{ url_for('index') }}">Inicio</a>
             </li>
             <li class="nav-item d-flex align-items-center">
-              <!-- <img src="{{ url_for('static', filename='Biblioteca.gif') }}" alt="Biblioteca" width="50" class="me-2" />-->
+              <img src="{{ url_for('static', filename='Biblioteca.gif') }}" alt="Biblioteca" width="50" class="me-2" />
               <a class="nav-link text-dark fw-medium" href="{{ url_for('biblioteca') }}">Biblioteca</a>
             </li>
             <li class="nav-item d-flex align-items-center">
-              <!-- <img src="{{ url_for('static', filename='Historial.gif') }}" alt="Historial" width="50"  class="me-2" />-->
+              <img src="{{ url_for('static', filename='Historial.gif') }}" alt="Historial" width="50"  class="me-2" />
               <a class="nav-link text-dark fw-medium" href="{{ url_for('translation_history') }}">Historial</a>
             </li>
           </ul>
